[package]
name = "oxidized-mtbl"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
flate2 = { version = "1.0", optional = true }
snap = { version = "1.0.0", optional = true }
zstd = { version = "0.5.1", optional = true }

[dev-dependencies]
memmap = "0.7.0"

[features]
default = ["zlib", "snappy", "zstd"]
snappy = ["snap"]
zlib = ["flate2"]
