[package]
name = "oxidized-mtbl"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
crc32c = { version = "0.4.0", optional = true }
flate2 = { version = "1.0", optional = true }
memmap = "0.7.0"
snap = { version = "1.0.0", optional = true }
tempfile = "3.1.0"
zstd = { version = "0.5.1", optional = true }

[dev-dependencies]
quickcheck = "0.9"

[features]
default = ["zlib", "snappy", "zstd", "checksum"]
checksum = ["crc32c"]
snappy = ["snap"]
zlib = ["flate2"]
